--- a/index.html
+++ b/index.html
@@ -793,12 +793,14 @@ console.log(
 document.addEventListener("DOMContentLoaded", () => {
   const modalContainer = document.getElementById('modalContainer');
   if (modalContainer) {
-    fetch('/modal-command.html')
+    fetch('modal-command.html')
       .then(res => res.text())
       .then(html => {
         modalContainer.innerHTML = html;
-        initModalEvents();
-        console.log("✅ Modal dimuat dari file eksternal");
+setTimeout(() => {
+  initModalEvents();
+  console.log("✅ Modal dimuat dari file eksternal dan diinisialisasi");
+}, 50);
       })
       .catch(err => console.error("❌ Gagal memuat modal:", err));
   } else {
