--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     <button id="openModalBtn" class="btn btn-command">⚙️ Jalankan Command</button>
   </div>
 
-  <h1>📥 MediaGM Downloader</h1>
+  <h1>📥 MediaDL Downloader</h1>
 
   <form id="downloadForm">
     <div class="url-input-wrapper">
